@@ -1,4 +1,5 @@
 Current Release
+- Fixed ipv6 tests in core helpers regtest.
 
 2009-09-23 release-0.5
 - Made trunk install as version 0.1
